--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,6 @@ header {
     height: 100%;
     margin: auto;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
 }
 
@@ -125,6 +124,44 @@ header {
 
 .text-section {
     width: 30%;
+    padding: 40px;
+}
+
+.text-section > h2 {
+    margin-bottom: 20px;
+}
+
+.text-section > p {
+    line-height: 25px;
+}
+
+.section-container.special {
+    padding: 30px;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-section .text-section.special {
+    width: 100%;
+    text-align: center;
+}
+
+.img-section.special {
+    width: 100%;
+    text-align: center;
+}
+
+.bottom-special h4 {
+    margin-bottom: 40px;
+}
+
+.bottom-special {
+    text-align: center;
+    width: 400px;
+    height: 50px;
+    background-image: url(../img/stars.svg);
+    background-size: contain;
 }
 
 /* fine sezione main */
@@ -189,6 +226,11 @@ footer {
 
 .btn.black {
     background-color: #25272a;
+    color: #fff;
+}
+
+.btn.violet {
+    background-color: #7175da;
     color: #fff;
 }
 
