--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,6 @@ header {
 
 .section-container {
     width: 70%;
-    height: 100%;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -174,7 +173,7 @@ header {
 /* inizio footer */
 
 footer {
-    height: 600px;
+
     background-color: #25272a;
 }
 
@@ -200,8 +199,14 @@ footer {
     width: 25%;
 }
 
+.column.social .languages {
+    font-size: 11px;
+    width: 68px;
+    cursor: pointer;
+}
+
 .column.social img {
-    width: 20px;
+    width: 12px;
 }
 
 .column.social h3, .column.social div {
@@ -212,28 +217,31 @@ footer {
     color: #7175da;
 }
 
-.column ul {
-    line-height: 30px;
+.contacts .column ul a {
+    text-decoration: none;
+    color: #fff;
 }
 
 .column.social i {
     margin-right: 5px;
+    cursor: pointer;
 }
 
 .contacts .column ul {
     list-style: none;
+    line-height: 35px;
 }
+
 
 hr {
     background-color: #7175da;
     width: 70%;
     height: 1px;
-    margin: auto;
+    margin: 10px auto;
     border: none;
 }
 
 .bottom-footer {
-    padding-top: 20px;
     height: 100px;
 }
 
@@ -242,12 +250,7 @@ hr {
     margin: auto;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     height: 100%;
-}
-
-.logo, .footer-button {
-    padding: 5px;
 }
 
 /* fine footer */
@@ -258,8 +261,31 @@ hr {
     border-radius: 50px;
     border: none;
     padding: 8px;
-
+    cursor: pointer;
+    position: relative;
+    transition-duration: 0.4s;
+    overflow: hidden;
 }
+
+.btn:after {
+    content: "";
+    background: #fff;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+}
+
+.btn:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+  }
 
 .btn:hover {
     background-color: #25272a;
@@ -271,6 +297,10 @@ hr {
     color: #fff;
 }
 
+.btn.black:after {
+    background: #25272a;
+}
+
 .btn.black:hover {
     background-color: #efefef;
     color: black;
@@ -279,6 +309,10 @@ hr {
 .btn.violet {
     background-color: #7175da;
     color: #fff;
+}
+
+.btn.violet:after {
+    background: #7175da;
 }
 
 .btn.violet:hover {
